0.2.5 
	- fix catch links which has inner elements
	- implement .do() and .log()
0.2.4 fixed double render at page load in Safari
0.2.3 
	- new method .onRenderEnd(callback) - called when everything is rendered
	after route(state) change.
0.2.2 
	- 'when' now accepts a string (not an array) and it is possible to use conditionals inside like "/faq || /about" ('&&' currently not supported )
	- fixed "finally" worked even if condition not "finally"
	- code cleanup (remove 'name' param of if, remove defaultView, defaultRender - use .set instead)
0.2.1 current page hash links now just jump to element (past behaviour: route reloads)
0.2.0 introduce the .finally for declaring "destructing" tree and begin changelog.
